--- a/packages/postgres/package.json
+++ b/packages/postgres/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ecco/postgres",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "private": true,
   "type": "module",
   "module": "src/index.ts",
   "exports": {
