feat: add changesets github

--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "start": "turbo run start",
     "changeset": "turbo run changeset",
     "version": "turbo run version",
-    "publish": "turbo run publish"
+    "publish": "turbo run publish",
+    "prepare": "husky"
   },
   "description": "Ecco MCP Manager",
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.5",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "husky": "^9.1.7",
     "turbo": "^2.5.5"
   },
   "packageManager": "bun@1.2.19",
