fix: turbo commands for lint and changesets

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "build": "turbo run build",
     "clean": "turbo run clean",
     "start": "turbo run start",
-    "changeset": "turbo run changeset",
-    "version": "turbo run version",
-    "publish": "turbo run publish",
+    "lint": "biome check .",
+    "lint:fix": "biome check . --write",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "publish": "changeset publish",
     "prepare": "husky"
   },
   "description": "Ecco MCP Manager",
