--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@ecco/core": "workspace:*",
-    "hono": "^4.8.12"
+    "hono": "^4.8.12",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@types/bun": "latest"
