--- a/packages/postgres/package.json
+++ b/packages/postgres/package.json
@@ -1,14 +1,29 @@
 {
   "name": "@ecco/postgres",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "module": "src/index.ts",
   "exports": {
     ".": "./src/index.ts"
   },
+  "scripts": {
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "bun run src/migrate.ts",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bun run src/seed.ts"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.5.1",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.4",
+    "zod": "^3.23.8"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.24.0"
   },
   "peerDependencies": {
     "typescript": "^5"
