--- a/packages/postgres/package.json
+++ b/packages/postgres/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "bun run src/migrate.ts",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:seed": "bun run src/seed.ts"
   },
