--- a/turbo.json
+++ b/turbo.json
@@ -28,6 +28,22 @@
     },
     "test": {
       "dependsOn": ["^test"]
+    },
+    "db:generate": {
+      "cache": false
+    },
+    "db:migrate": {
+      "cache": false
+    },
+    "db:push": {
+      "cache": false
+    },
+    "db:studio": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:seed": {
+      "cache": false
     }
   }
 }
