chore: update readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,9 @@ services:
     ports:
       - "3000:3000"
     environment:
+      - API_PORT=${API_PORT}
       - DATABASE_URL=${DATABASE_URL}
       - NODE_ENV=${NODE_ENV}
-      - PORT=${API_PORT}
       - REDIS_URL=${REDIS_URL}
     volumes:
       # Mount source code for development hot reload
