--- a/packages/postgres/package.json
+++ b/packages/postgres/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
+    "db:push": "drizzle-kit push --force",
     "db:studio": "drizzle-kit studio",
     "db:seed": "bun run src/seed.ts"
   },
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.24.0"
+    "drizzle-kit": "^0.31.4"
   },
   "peerDependencies": {
     "typescript": "^5"
