--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@ecco/core": "workspace:*",
+    "@hono/zod-validator": "^0.7.2",
     "hono": "^4.8.12",
     "zod": "^4.0.15"
   },
